# GEngine

./: .env.sample  .gitignore  .markdownlint.json  AGENTS.md  Dockerfile  README.md  coverage.xml  docker-compose.yml  gamedev-agent-thoughts.txt  jest.config.js  jest.setup.js  opencode.json  package-lock.json  package.json  playwright.config.ts  pyproject.toml  pytest.ini  start.sh
.beads/: PR-110-tests-added.md  beads.db  beads.db-shm  beads.db-wal  daemon-error  issues.jsonl  sync_base.jsonl
.gengine/: config.example.yaml
.github/: HANDOFF_M9_1_AI_OBSERVER.md  copilot-instructions.md
.github/agents/: agent-todos.md  agent.author.agent.md  devops-infra.agent.md  docs.agent.md  execdocs.agent.md  game-design.agent.md  gamedev.agent.md  git.agent.md  test.agent.md  tests.agent.md  tracker.agent.md
.github/prompts/: author.prompt.md  execute.prompt.md  todo.prompt.md
.github/templates/: Exec_Doc_Template.md
.github/workflows/: ai-tournament.yml  balance-validation.yml  content-validation.yml  gh-pages.yml  k8s-smoke-test.yml  k8s-validation.yml  playwright-nightly.yml  playwright.yml  pr-ci.yml  python-tests.yml  replay.yml  validate-story.yml
.opencode/: agent_map.yaml  package-lock.json  server.yaml  tmp_ge-sty_comment.md
.perles/: config.yaml
.pm/: 12.2.3-player-interactivity-ui-wiring.md  tracker.md
.waif/: ooda-scheduler.yaml
artifacts/: README.md
config/: symbols.json  waif_pacakges.yaml  workflow_agents.yaml
docs/: HISTORY_POLICY.md  InkJS_README.md  Unity_README.md  content-iteration.md  risk_notes.md
history/: cleanup-report-20260116T091533Z.md  plan_ge-hch.3_agent_story_gen.md
results/: validate-story.json  validate-test-story.json
scripts/: __init__.py  aggregate_sweep_results.py  analyze_ai_games.py  analyze_balance.py  analyze_difficulty_profiles.py  build-hook-shim.js  build_content.py  build_llm_knowledge_base.py  check-agent-permissions.sh  cors-proxy.js  demo_terminal_ui.py  dev-runner.js  echoes_balance_studio.py  echoes_llm_chat.py  ensure-demo-server.js  eoe_dump_state.py  generate-director-config.js  k8s_smoke_test.sh  manage_balance_baseline.py  optimize_strategies.py  plot_environment_trajectories.py  replay.js  run-demo-tests.js  run_ai_observer.py  run_ai_tournament.py  run_batch_sweeps.py  run_difficulty_sweeps.py  run_headless_sim.py  smoke_test_containers.sh  test_llm_service.py  validate-story.js
tests/: demo.smoke.spec.ts  demo.telemetry-buffer.spec.ts  demo.telemetry.spec.ts  director.smoke.spec.ts  load-test-story.spec.ts
web/: index.html
(+405 files in other folders)
